--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "radium": "^0.24.0",
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
+    "react-pdf": "^3.0.4",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.4"
